# projects_QT

./: CMakeLists.txt  README.md  syntaxhighlighter.cpp  syntaxhighlighter.h
applications/mdi_app/: description.txt  mdiprogram.h
applications/notepad/: main.cpp  notepad.cpp  notepad.h
applications/save_settings/: description.txt  myprogram.h
applications/tray/: description.txt  systemtray.cpp
base_qt/: CMakeLists.txt
base_qt/hello/: CMakeLists.txt  main.cpp
create_application/: CMakeLists.txt
create_application/dialog/: CMakeLists.txt  inputdialog.cpp  inputdialog.h  main.cpp  startdialog.cpp  startdialog.h
create_application/drag_and_drop/: CMakeLists.txt  drag.cpp  drag.h  drop.cpp  drop.h  main.cpp
create_application/drag_drop_widget/: CMakeLists.txt  main.cpp  widget.cpp  widget.h  widgetdrag.cpp  widgetdrag.h  widgetmimedata.cpp  widgetmimedata.h
create_application/help/: CMakeLists.txt  main.cpp
create_application/mdi_app/: CMakeLists.txt  main.cpp  mdiprogram.cpp
create_application/save_settings/: CMakeLists.txt  main.cpp  myprogram.cpp
create_application/screen_short/: CMakeLists.txt  grabwidget.cpp  grabwidget.h  main.cpp
create_application/simple_notepad/: CMakeLists.txt  sdiprogram.cpp  sdiprogram.h
create_application/splash_screen/: CMakeLists.txt  main.cpp
create_application/status_bar/: CMakeLists.txt  main.cpp  mymainwindow.cpp  mymainwindow.h
create_application/system_tray/: CMakeLists.txt  main.cpp  resources.qrc  systemtray.cpp  systemtray.h
events/: CMakeLists.txt
events/change_a_to_z/: CMakeLists.txt  main.cpp
events/event_filter/: CMakeLists.txt  main.cpp  mousefilter.cpp  mousefilter.h
events/mouse_observer/: CMakeLists.txt  main.cpp  mouseobserver.cpp  mouseobserver.h
events/resize_event/: CMakeLists.txt  main.cpp
events/simul_press_key/: CMakeLists.txt  main.cpp
graph/: CMakeLists.txt
graph/animation_widget/: CMakeLists.txt  main.cpp
graph/bottom_new_style/: CMakeLists.txt  customstyle.cpp  customstyle.h  main.cpp  resources.qrc
graph/brightness/: CMakeLists.txt  main.cpp  resources.qrc
graph/change_state/: CMakeLists.txt  main.cpp
graph/change_style/: CMakeLists.txt  main.cpp  myapplication.cpp  myapplication.h
graph/color_animation/: CMakeLists.txt  main.cpp
graph/combining_lbl/: CMakeLists.txt  main.cpp
graph/effects/: CMakeLists.txt  main.cpp
graph/elements_on_scene/: CMakeLists.txt  main.cpp
graph/elided_text/: CMakeLists.txt  main.cpp
graph/example_style/: CMakeLists.txt  main.cpp
graph/gif/: CMakeLists.txt  main.cpp  resources.qrc
graph/music_player/: CMakeLists.txt  soundplayer.cpp  soundplayer.h
graph/my_indicator/: CMakeLists.txt  customwidget.cpp  customwidget.h  main.cpp
graph/printer/: CMakeLists.txt  main.cpp  printer.cpp  printer.h
graph/pyramid_ogl/: CMakeLists.txt  oglpyramid.h
graph/rect_in_ogl/: CMakeLists.txt  main.cpp  oglquad.cpp  oglquad.h
graph/simple_form_ogl/: CMakeLists.txt  main.cpp  ogldraw.cpp  ogldraw.h
graph/transform_on_bottom/: CMakeLists.txt  main.cpp  myview.cpp  myview.h  simpleitem.cpp  simpleitem.h
graph/transform_widget/: CMakeLists.txt  main.cpp
graph/transparent_app/: CMakeLists.txt  main.cpp
graph/video_player/: CMakeLists.txt  main.cpp  videoplayer.cpp  videoplayer.h
managment_elements/: CMakeLists.txt  syntax_light.txt
managment_elements/bttn_and_flag/: CMakeLists.txt  buttons.cpp  buttons.h  main.cpp  resources.qrc
managment_elements/calculator/: CMakeLists.txt  calculator.cpp  calculator.h  calculator.txt  main.cpp
managment_elements/counters/: CMakeLists.txt  main.cpp
managment_elements/el_choice/: CMakeLists.txt  main.cpp
managment_elements/el_input/: CMakeLists.txt  main.cpp
managment_elements/el_setting/: CMakeLists.txt  main.cpp
managment_elements/filemanager/: CMakeLists.txt  filemanager.txt  main.cpp
managment_elements/hight_widgets/: CMakeLists.txt  main.cpp  resources.qrc
managment_elements/html_text/: CMakeLists.txt  main.cpp  resources.qrc
managment_elements/html_wgt/: CMakeLists.txt  main.cpp
managment_elements/int_list_model/: CMakeLists.txt  intlistmodel.cpp  intlistmodel.h  main.cpp
managment_elements/int_table_model/: CMakeLists.txt  main.cpp  tablemodel.cpp  tablemodel.h
managment_elements/lay_out/: CMakeLists.txt  main.cpp
managment_elements/progress_bar/: CMakeLists.txt  main.cpp  progress.cpp  progress.h
managment_elements/proxy_model/: CMakeLists.txt  main.cpp  widget.h
managment_elements/qlcd_num/: CMakeLists.txt  main.cpp
managment_elements/roles/: CMakeLists.txt  main.cpp
managment_elements/show_el/: CMakeLists.txt  main.cpp
managment_elements/simple_delegate/: CMakeLists.txt  main.cpp
managment_elements/simple_gelegate/: simple_gelegate.txt
managment_elements/syntax_light/: CMakeLists.txt  main.cpp  syntax_light.txt
sound_generator/: CMakeLists.txt  karplus_strong.cpp  karplus_strong.h  mywidget.cpp  mywidget.h
special_features/: CMakeLists.txt
special_features/blink_label/: CMakeLists.txt  blinklabel.cpp  blinklabel.h  main.cpp
special_features/client/: CMakeLists.txt  main.cpp  myclient.cpp  myclient.h
special_features/downloader/: CMakeLists.txt  downloader.cpp  downloader.h  downloadergui.cpp  downloadergui.h  main.cpp
special_features/file_finder/: CMakeLists.txt  filefinder.cpp  filefinder.h  main.cpp
special_features/read_xml/: CMakeLists.txt  addressbook.xml  main.cpp  resources.qrc
special_features/server/: CMakeLists.txt  main.cpp  myserver.cpp  myserver.h
special_features/shell/: CMakeLists.txt  main.cpp  shell.cpp  shell.h
special_features/thread_event/: CMakeLists.txt  main.cpp  myprogressbar.cpp  myprogressbar.h  mythread.cpp  mythread.h  progressevent.cpp  progressevent.h
special_features/viewer/: CMakeLists.txt  main.cpp  viewer.cpp  viewer.h
special_features/web_browser/: CMakeLists.txt  main.cpp  webbrowser.cpp  webbrowser.h
special_features/write_xml/: CMakeLists.txt  main.cpp
threads/: CMakeLists.txt  main.cpp  mywidget.cpp  mywidget.h  myworker.cpp  myworker.h  resources.qrc  verylong.cpp  verylong.h
(+18 files in other folders)
