cmake_minimum_required(VERSION 3.14)

project(base_qt LANGUAGES CXX)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(animation_widget)
add_subdirectory(bottom_new_style)
add_subdirectory(brightness)
add_subdirectory(change_state)
add_subdirectory(change_style)
add_subdirectory(color_animation)
add_subdirectory(combining_lbl)
add_subdirectory(effects)
add_subdirectory(elements_on_scene)
add_subdirectory(elided_text)
add_subdirectory(example_style)
add_subdirectory(gif)
add_subdirectory(music_player)
add_subdirectory(my_indicator)
add_subdirectory(printer)
#add_subdirectory(pyramid_ogl)
#add_subdirectory(rect_in_ogl)
#add_subdirectory(simple_form_ogl)
add_subdirectory(transform_on_bottom)
add_subdirectory(transform_widget)
add_subdirectory(transparent_app)
add_subdirectory(video_player)
