cmake_minimum_required(VERSION 3.14)

project(base_qt LANGUAGES CXX)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(bttn_and_flag)
add_subdirectory(calculator)
add_subdirectory(counters)
add_subdirectory(el_choice)
add_subdirectory(el_input)
add_subdirectory(el_setting)
add_subdirectory(filemanager)
add_subdirectory(hight_widgets)
add_subdirectory(html_text)
add_subdirectory(html_wgt)
add_subdirectory(int_list_model)
add_subdirectory(int_table_model)
add_subdirectory(lay_out)
add_subdirectory(progress_bar)
add_subdirectory(proxy_model)
add_subdirectory(qlcd_num)
add_subdirectory(roles)
add_subdirectory(show_el)
add_subdirectory(simple_delegate)
add_subdirectory(syntax_light)